[workspace]
resolver = "2"

members=[
    "bdt-tools",
    "cyfs-tools",
    "cyfs-stack-test-rust/unittest_nameobject",
    "cyfs-stack-test-rust/profile",
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
