[package]
name = "rust-dec-app-service"
version = "0.0.1"
edition = "2021"
license = "BSD-2-Clause"
description = "Rust rust-dec-app-service package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "=0.4.16"
async-std = { version = "1.8", features = ["std"] }
async-trait = "0.1.53"
async-recursion = "1.0.0"
sha2 = "0.10.6"
rand = "0.8.5"
cyfs-base = "0.6.11"
cyfs-debug = "0.6.5"
cyfs-util = "0.6.7"
cyfs-bdt = "0.7.2"
cyfs-lib = "0.8.2"
cyfs-task-manager = "0.6.4"
config = "0.13.1"
