[package]
name = "test_simulator"
version = "0.5.0"
authors = ["lizhihong <lizhihong@buckyos.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust test_simulator package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-util = { path = "../../CYFS/src/component/cyfs-util" }
cyfs-bdt = { path = "../../CYFS/src/component/cyfs-bdt" }
cyfs-base = { path = "../../CYFS/src/component/cyfs-base" }
cyfs-core = { path = "../../CYFS/src/component/cyfs-core" }
cyfs-debug = { path = "../../CYFS/src/component/cyfs-debug" }
cyfs-stack-loader = { path = "../../CYFS/src/component/cyfs-stack-loader", features = [
    "mongo",
    "sqlite",
], default-features = false }
cyfs-lib = { path = "../../CYFS/src/component/cyfs-lib" }
cyfs-cip = { path = "../../CYFS/src/component/cyfs-cip" }
hex = "0.4"
log = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
bip39 = { version = "1.0", features = ["rand", "std"] }
futures = "0.3"
async-trait = "0.1.53"
once_cell = "1.12"
lazy_static = "1.4"
clap = "2.34.0"
