[package]
name = "ndn-demo-sync-dst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "=0.4.16"
async-std ={ version = "1.8", features = ["std"]}
async-trait = "0.1.53"
rand = "0.8.5"
cyfs-base={path="../../../CYFS/src/component/cyfs-base"}
cyfs-debug = { path = "../../../CYFS/src/component/cyfs-debug" }
cyfs-util =  { path = "../../../CYFS/src/component/cyfs-util" }
cyfs-bdt = { path = "../../../CYFS/src/component/cyfs-bdt" }
cyfs-lib = { path = "../../../CYFS/src/component/cyfs-lib" }
cyfs-core = { path = "../../../CYFS/src/component/cyfs-core" }