[package]
name = "ndn-demo-sync-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
futures = { version = '0.3', features = ['default', 'thread-pool'] }
async-trait = '0.1.53'
async-recursion = '1.0'
once_cell = '1.12'
cyfs-util = { path = "../../../CYFS/src/component/cyfs-util" }
cyfs-bdt = { path = "../../../CYFS/src/component/cyfs-bdt" }
cyfs-base = { path = "../../../CYFS/src/component/cyfs-base" }
cyfs-core = { path = "../../../CYFS/src/component/cyfs-core" }
cyfs-debug = { path = "../../../CYFS/src/component/cyfs-debug" }
cyfs-lib = { path = "../../../CYFS/src/component/cyfs-lib" }

[dev-dependencies]
zone-simulator = { path = "../../../CYFS/src/tools/zone-simulator" }